# capra_hazmat_detection

./: CMakeLists.txt  README.md  package.xml
include/: labels.txt
launch/: detect_hazmat.launch  detect_hazmat_usb.launch
msg/: labels_msg.msg
scripts/: .detection_usb.swp  aiden.py  detect.py  detection.py  detection_usb.py
